# Imperative-Programming

./: README.md
2018-19-1/: birth.c  birth2.c  foo.c  foo2.c  funptr.c  hello.c  linked_list.c  preprocessor.c  proba.py  ptr1.c  ptr2.c  stdin_charrange-replace.c  union.c  variant.h  yourmood.c  yourmood2.c  yourmood3.c
2018-19-1/days/: days.h  days_select.c  leapyear.c  leapyear.h  main.c  main.out
2018-19-1/days2/: date.h  days.c  days.h  days_switch.c  leapyear.c  leapyear.h  main.c
2018-19-1/days_kedd/: days.c  days.h  days_select.c  leapyear.c  leapyear.h  main.c
2018-19-1/hdani_gyak3_helyettesites/: control_structures.c  control_structures.py  replace_letters.c
2018-19-1/matrixfiles/: main.c  vector.c  vector.h
2018-19-1/szamok_novelese_fajlbol/: input.txt  szamok-novelese-plumini.c
2018-19-1/vector/: main.c  vector.h
2018-19-1/vector_deleter/: main.c  vector.c  vector.h
2018-19-1/vizsgafeladatsorok/: feladatsorok.txt  gy1.c  gy2.c  gy3.c  gy4.c  megoldasok.txt
2019-20-1/03a - echo/: main.c
2019-20-1/03b - palindrome/: main.c
2019-20-1/04 - to_lower/: main.c  to_lower.c  to_lower.h
2019-20-1/05 - malloc/: main.c
2019-20-1/06 - struct/: main.c  point.c  point.h  point_pair.c
2019-20-1/07 - point_pairs/: main.c  point_pair.c  point_pair.h
2019-20-1/11 - month/: CMakeLists.txt  main.c
2019-20-1/6 - struct/: point_pair.h
2019-20-1/7 - point_pairs/: point.c  point.h
2019-20-1/8 - matrix/: CMakeLists.txt  main.c
2019-20-1/8 - matrix/matrix/: matrix_io.c
2019-20-1/9 - string/: main.c
2019-20-1/ex1pr - sieve/: main.c  main.cpp
(+19 files in other folders)
